--- a/chat-app/src/components/ChatDisplay/ChatDisplay.css
+++ b/chat-app/src/components/ChatDisplay/ChatDisplay.css
@@ -1,1 +1,35 @@
-.ChatDisplay {}
+.chat-display {
+    min-width: 85%;
+    height: 100%;
+    background-color: #40485f;
+}
+
+.chat-box {
+    overflow-y: auto;
+    height: 90%;
+}
+
+.message-box {
+    padding: 0 25% 10px;
+}
+
+.border-solid {
+    background-color: #292E3F;
+    border-radius: 15px;
+    padding: 15px;
+    margin-top: 5px;
+}
+
+/* Pour Chrome et Safari (WebKit) */
+::-webkit-scrollbar {
+    width: 12px; /* Largeur de la barre de défilement */
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #007bff; /* Couleur de la poignée (barre mobile) */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #292E3F; /* Couleur de la piste (barre fixe) */
+}
