--- a/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
+++ b/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
@@ -1,1 +1,24 @@
-.HistoryAccordion {}
+.HistoryAccordion {
+    min-width: 15%;
+    height: 100%;
+    background-color: #292E3F;
+}
+
+.title {
+    margin: 25px;
+}
+
+.button-box {
+    height: 100%;
+    margin: auto 0 auto 25px;
+}
+
+.button {
+    display: block;
+    background-color: #191c27;
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
