--- a/chat-app/src/components/ChatDisplay/ChatDisplay.css
+++ b/chat-app/src/components/ChatDisplay/ChatDisplay.css
@@ -20,16 +20,15 @@
     margin-top: 5px;
 }
 
-/* Pour Chrome et Safari (WebKit) */
 ::-webkit-scrollbar {
-    width: 12px; /* Largeur de la barre de défilement */
+    width: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: #007bff; /* Couleur de la poignée (barre mobile) */
+    background-color: #757c85;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #292E3F; /* Couleur de la piste (barre fixe) */
+    background-color: #292E3F;
 }
