--- a/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
+++ b/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
@@ -1,6 +1,10 @@
-.HistoryAccordion {
+.history-accordion {
     min-width: 15%;
-    height: 100%;
+    height: 90%;
+    margin-bottom: 15px;
+}
+
+.bg-color {
     background-color: #292E3F;
 }
 
@@ -10,6 +14,7 @@
 
 .button-box {
     height: 100%;
+    overflow-y: auto;
     margin: auto 0 auto 25px;
 }
 
