--- a/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
+++ b/chat-app/src/components/HistoryAccordion/HistoryAccordion.css
@@ -12,15 +12,26 @@
     margin: 25px;
 }
 
+.color-gray {
+    background-color: #404869;
+}
+
+.color-dark-gray {
+    background-color: #191c27;
+}
+
+.hr-margin {
+    margin-bottom: 15px;
+}
+
 .button-box {
     height: 100%;
     overflow-y: auto;
-    margin: auto 0 auto 25px;
+    margin: auto 25px;
 }
 
 .button {
     display: block;
-    background-color: #191c27;
     padding: 10px;
     border: 0;
     border-radius: 5px;
